cmake_minimum_required(VERSION 3.24)

project(hestia VERSION 0.0.1 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/infra/cmake)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

include(GNUInstallDirs)
set(CMAKE_INSTALL_INCLUDEDIR ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})

option(HESTIA_BUILD_TESTS "Build Hestia tests." OFF)
option(HESTIA_BUILD_DOCUMENTATION "Build Hestia Documentation. Depends on Doxygen." OFF)

set(FETCHCONTENT_UPDATES_DISCONNECTED ON)
include(FetchOstk)
fetch_ostk()

add_subdirectory(src)

if (HESTIA_BUILD_TESTS)
    include(CTest)
    add_subdirectory(test)
endif(HESTIA_BUILD_TESTS)

if(HESTIA_BUILD_DOCUMENTATION)
    add_subdirectory(doc)
endif(HESTIA_BUILD_DOCUMENTATION)