include(AddModule)

add_subdirectory(base_types)

add_module(
    MODULE_NAME hsm
    HEADERS
        data_placement_engine/BasicDataPlacementEngine.h 
        data_placement_engine/DataPlacementEngine.h
        data_placement_engine/DataPlacementEngineFactory.h
        distributed_hsm_service/DistributedHsmService.h
        hsm_service/HsmService.h
        hsm_service/HsmServicesFactory.h
        hsm_service/model/CompositeLayer.h
        hsm_service/requests/HsmActionResponse.h 
        hsm_service/requests/HsmActionRequest.h
        hsm_service/requests/HsmActionError.h 
        key_value_store/KeyValueStoreClientFactory.h
        object_store/DistributedHsmObjectStoreClient.h
        object_store/HsmObjectStoreClientFactory.h
        object_store/HsmObjectStoreClientManager.h
        s3_service/S3Service.h
        s3_service/S3DatasetAdapter.h
        s3_service/S3ObjectAdapter.h
    SOURCES
        data_placement_engine/BasicDataPlacementEngine.cc
        data_placement_engine/DataPlacementEngineFactory.cc
        distributed_hsm_service/DistributedHsmService.cc
        hsm_service/HsmService.cc
        hsm_service/HsmServicesFactory.cc
        hsm_service/model/CompositeLayer.cc
        hsm_service/requests/HsmActionResponse.cc
        hsm_service/requests/HsmActionRequest.cc
        hsm_service/requests/HsmActionError.cc
        key_value_store/KeyValueStoreClientFactory.cc
        object_store/DistributedHsmObjectStoreClient.cc
        object_store/HsmObjectStoreClientFactory.cc
        object_store/HsmObjectStoreClientManager.cc
        s3_service/S3Service.cc
        s3_service/S3DatasetAdapter.cc
        s3_service/S3ObjectAdapter.cc
    INTERNAL_INCLUDE_DIRS
        data_placement_engine
        distributed_hsm_service
        hsm_service
        hsm_service/model
        hsm_service/requests
        key_value_store
        object_store
        namespace_service
        s3_service
    INTERNAL_DEPENDENCIES 
        storage
        http_client
        web
        event_feed
        hsm_base_types
)

add_dependencies(${PROJECT_NAME}_hsm ${PROJECT_NAME}_storage_and_plugins)